<!--
  ~ Beedio is an Android app for downloading videos
  ~ Copyright (C) 2019 Loremar Marabillas
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Download Screen</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="inactive">Inactive</string>
    <string name="zero_percent">0%</string>
    <string name="no_title">no title</string>
    <string name="zero_downloaded">0KB / 0KB</string>
    <string name="no_details">no details</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="move">Move</string>
    <string name="delete_all">Delete All</string>
    <string name="folder">Download Folder</string>
    <string name="help">Help</string>
    <string name="fresh_link_added">New fresh link added to download list</string>
    <string name="inactive_help_title">Help</string>
    <string name="inactive_help_message">Click on an inactive item. Once directed to webpage, play
        the video. Link will be automatically refreshed.
    </string>
    <string name="inactive_help_close">Close</string>
</resources>
