<?xml version="1.0" encoding="utf-8"?><!--
  ~ Beedio is an Android app for downloading videos
  ~ Copyright (C) 2019 Loremar Marabillas
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/completed_menu_group">
        <item
            android:id="@+id/completed_menu_delete_all"
            android:icon="@drawable/ic_delete_all_24dp"
            android:title="@string/delete_all"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/completed_menu_folder"
            android:icon="@drawable/ic_folder_24dp"
            android:title="@string/folder"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/inactive_menu_group">
        <item
            android:id="@+id/inactive_menu_delete_all"
            android:icon="@drawable/ic_delete_all_24dp"
            android:title="@string/delete_all"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/inactive_menu_help"
            android:icon="@drawable/ic_live_help_white_24dp"
            android:title="@string/help"
            app:showAsAction="ifRoom" />
    </group>
</menu>